Fixed a few minor layout issues

--- a/src/styles/components/_byline-list.scss
+++ b/src/styles/components/_byline-list.scss
@@ -1,6 +1,7 @@
 .byline-list {
   margin: 5px 0;
   list-style: none;
+  padding-left: 0;
 
   &::after {
     @include minorText();
