--- a/src/styles/components/_rich-content.scss
+++ b/src/styles/components/_rich-content.scss
@@ -15,6 +15,10 @@
   // override apos end
 
   .apos-rich-text {
+    > :first-child {
+      margin-top: 0;
+    }
+
     @include aposRichText();
     margin-top: 20px;
     margin-bottom: 20px;
